# bettercollected

./: .dockerignore  .env.deployment  .gitignore  .gitmodules  AUTHORS  DEPLOYMENT_GUIDE.md  LICENSE  README.md  deploy.cmd  deploy.sh  docker-compose.deployment.yml  docker-compose.local.yml  install.sh  make-dev-docker-image.sh  nginx-local.conf  run-locally.sh  seed-data-deployment.js  seed-data.js
backend/: .dockerignore  .env.example  .fastapi-mvc.yml  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  default.nix  docker-compose.yml  flake.nix  image.nix  pyproject.toml  run.sh  sonar-project.properties  test.py
backend/.ci/: Dockerfile  docker-compose.yml  test
backend/.github/workflows/: build.yml  docs.yml  integration.yml  main.yml  nix.yml
backend/backend/: __init__.py  __main__.py  version.py  wsgi.py
backend/backend/app/: __init__.py  asgi.py  container.py  router.py
backend/backend/app/constants/: consents.py  messages.py  themes.py
backend/backend/app/controllers/: actions_router.py  analytics_router.py  auth_router.py  coupon_controller.py  integration.py  media_library.py  plugin_provider.py  plugin_proxy.py  price_suggestion.py  ready.py  responder_groups.py  stripe_router.py  template.py  template_router.py  temporal_router.py  user_tags_router.py  workspace_consent.py  workspace_forms.py  workspace_members.py  workspace_responder.py  workspace_responses.py  workspace_router.py
backend/backend/app/core/: form_plugin_config.py  plugin.json  plugin_client.py
backend/backend/app/decorators/: user_tag_decorator.py  user_tag_decorators.py
backend/backend/app/exceptions/: __init__.py  forbidden_exception.py  http.py  provider_config_exception.py
backend/backend/app/handlers/: __init__.py  database.py
backend/backend/app/middlewares/: __init__.py  dynamic_cors_middleware.py
backend/backend/app/models/: form_plugin_config.py  generic_models.py  invitation_request.py  minified_form.py  request_dtos.py  response_dtos.py  settings_patch.py  template.py  user_tags.py  workspace.py  workspace_invitation.py  workspace_member_dto.py
backend/backend/app/repositories/: action_repository.py  coupon_repository.py  deletion_requests_repository.py  form_plugin_provider_repository.py  form_repository.py  form_response_repository.py  media_library_repository.py  responder_groups_repository.py  template.py  user_feedback.py  user_tags_repository.py  workspace_consent_repo.py  workspace_form_repository.py  workspace_invitation_repo.py  workspace_repository.py  workspace_responders_repository.py  workspace_user_repository.py
backend/backend/app/schedulers/: form_schedular.py
backend/backend/app/schemas/: action_document.py  allowed_origin.py  apscheduler.py  blacklisted_refresh_tokens.py  consent.py  coupon_codes.py  create_form_prompts.py  form_plugin_config.py  form_versions.py  media_library.py  price_suggestion.py  responder_group.py  (+10 more)
backend/backend/cli/: __init__.py  cli.py  serve.py
backend/backend/config/: OpenAISettings.py  UmamiSettings.py  __init__.py  api_settings.py  application.py  auth_settings.py  aws.py  brevo_settings.py  coupon_code_settings.py  database.py  events_webhook.py  https_certificate.py  kafka_settings.py  provider_plugin.py  redis.py  schedular_settings.py  sentry_setting.py  template_settings.py  temporal_settings.py
backend/bettercollected_backend_server/: __init__.py  __main__.py  version.py  wsgi.py
backend/bettercollected_backend_server/app/: __init__.py  asgi.py  router.py
backend/bettercollected_backend_server/cli/: __init__.py  cli.py  serve.py
backend/bettercollected_backend_server/config/: __init__.py  application.py  provider_plugin.py  redis.py
backend/charts/bettercollected-backend-server/: Chart.yaml  README.md  values.yaml
backend/docs/: api.rst  conf.py  index.rst  install.rst  nix.rst  usage.rst
backend/tests/: conftest.py
backend/tests/integration/: conftest.py
backend/tests/unit/: conftest.py  test_wsgi.py
common/: .flake8  .gitignore  .pre-commit-config.yaml  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py  sonar-project.properties
common/base/: plugin.py  repo.py
common/common/base/: plugin.py
common/common/configs/: mongo_document.py
common/common/constants/: messages.py  plugin_routes.py
common/common/enums/: plan.py
common/common/models/: consent.py  standard_form.py  user.py
common/common/schemas/: base_schema.py  form_scheduler_config.py
common/common/services/: crypto_service.py  http_client.py  transformer_service.py
common/common/utils/: cbv.py  logger.py  router.py
common/configs/: crypto.py  mongo_document.py
common/constants/: __init__.py  messages.py  plugin_routes.py
common/enums/: form_provider.py  http_methods.py  roles.py  workspace_invitation_status.py
common/exceptions/: __init__.py
common/models/: consent.py  form_import.py  form_provider.py  form_scheduler_config.py  google_form.py  google_form_response.py  oauth_credential.py  standard_form.py  transformers.py  user.py  workspace.py  workspace_invitation.py
common/schemas/: allowed_origin.py  base_schema.py  form_scheduler_config.py  google_form.py  google_form_response.py  oauth_credential.py  user.py  workspace.py  workspace_form.py  workspace_invitation.py  workspace_user.py
common/services/: crypto_service.py  http_client.py  jwt_service.py  transformer_service.py
common/tests/utils/: test_str.py
common/utils/: asyncio_run.py  cbv.py  logger.py  router.py  str.py
temporal/worker/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  run.sh
temporal/worker/activities/: delete_response.py  delete_user.py  get_preview_image.py  import_form.py  save_preview.py
temporal/worker/models/: SavePreviewParams.py
temporal/worker/settings/: apm_settings.py  application.py
temporal/worker/workflows/: form_import_workflow.py  response_deletion_workflow.py  save_template_preview.py  user_deletion_workflow.py
temporal/worker/wrappers/: APMWrapper.py  thread_pool_executor.py
(+2401 files in other folders)
