[tool.poetry]
name = "temporal-worker"
version = "0.1.0"
description = ""
authors = ["ankit.sapkota555 <ankit.sapkota555@gmail.com>"]
readme = "README.md"
packages = [{include = "temporal_worker"}]

[tool.poetry.dependencies]
python = "^3.10"
temporalio = "^1.2.0"
asyncio = "^3.4.3"
requests = "^2.31.0"
pydantic = "^1.10.9"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
